--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font: 14px "Century Gothic", Futura, sans-serif;
+    margin: 20px;
+  }
+
+
+.profile_user_info{
+  background-color: darkgoldenrod;
+  color: black;
+}
+
+.profile_post_info {
+  background-color: darkseagreen;
+  color: black;
+  margin:10px;
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.post_info{
+  background-color: cadetblue;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.comment{
+  background-color: dimgray;
+  padding:5px;
+  margin-top:15px;
+}
+
+.smallLink{
+  color: cyan;
+  margin:5px;
+  font-size: small;
+}
+
+.response{
+  color: cornsilk;
+  margin-bottom: 10px;
+  margin-top: 0px;
+}
+
+.text_box{
+  width:300px;
+  height: 100px;
 }
