--- a/src/index.css
+++ b/src/index.css
@@ -41,12 +41,41 @@ body {
 }
 
 .response{
+  background-color:gray;
   color: cornsilk;
-  margin-bottom: 10px;
-  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-top: 1px;
+  border-bottom:5px, solid, rgb(2, 3, 1);
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .text_box{
   width:300px;
   height: 100px;
+}
+.error{
+  background-color: red;
+  color: aliceblue;
+  font-size: large;
+  height: 25px;
+}
+
+.address_suggestion{
+  background-color:gainsboro;
+  border-style: none;
+  margin-top: 2px;
+  width: 100%;
+}
+
+button:hover{
+  background-color: salmon;
+}
+
+.address_suggestion_area{
+  background-color: rgb(184, 241, 126);
+  width: 50%;
 }
